--- a/ProyectoFinal_GarroFernando/Views/Home/Index.cshtml
+++ b/ProyectoFinal_GarroFernando/Views/Home/Index.cshtml
@@ -2,7 +2,39 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="d-flex align-items-center justify-content-center" style="min-height: calc(100vh - 160px);">
+    <div class="welcome-box text-center">
+        <h5>Bienvenido al Sistema de gestión de matrícula!!</h5>
+        <p>Favor inicie sesión para continuar con el proceso…</p>
+    </div>
 </div>
+
+
+
+
+<style>
+
+    .welcome-box {
+        background: #e9ecef;
+        color: #176C8C;
+        border: 2px solid #0f4e61;
+        border-radius: 18px;
+        padding: 1.25rem 1.5rem;
+        font-weight: 700;
+        max-width: 980px;
+        margin: auto; /* centra horizontal si el ancho es menor */
+        position: relative; /* <-- necesario para el “truco” */
+        top: 50%; /* empuja el elemento a la mitad del alto del contenedor */
+        transform: translateY(-50%); /* lo sube la mitad de su propia altura */
+    }
+
+        .welcome-box h5 {
+            margin-bottom: .5rem;
+        }
+
+        .welcome-box p {
+            margin: 0;
+            font-weight: 700;
+        }
+
+</style>
