--- a/ProyectoFinal_GarroFernando/Views/Home/Index.cshtml
+++ b/ProyectoFinal_GarroFernando/Views/Home/Index.cshtml
@@ -22,10 +22,10 @@
         padding: 1.25rem 1.5rem;
         font-weight: 700;
         max-width: 980px;
-        margin: auto; /* centra horizontal si el ancho es menor */
-        position: relative; /* <-- necesario para el “truco” */
-        top: 50%; /* empuja el elemento a la mitad del alto del contenedor */
-        transform: translateY(-50%); /* lo sube la mitad de su propia altura */
+        margin: auto;
+        position: relative;
+        top: 50%; 
+        transform: translateY(-50%); 
     }
 
         .welcome-box h5 {
