--- a/ProyectoFinal_GarroFernando/Views/Shared/_LoginPartial.cshtml
+++ b/ProyectoFinal_GarroFernando/Views/Shared/_LoginPartial.cshtml
@@ -6,11 +6,11 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
-        <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
+            <span class="header-info">Usuario: @User.Identity?.Name!</span>
     </li>
     <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button  type="submit" class="nav-link btn btn-link text-dark">Cerrar Sesión</button>
+                <button type="submit" class="header-info">Cerrar Sesión</button>
         </form>
     </li>
 }
