Confuguracion del menu principal de un profesor (Administrador) A cada uno de las secciones

--- a/ProyectoFinal_GarroFernando/Views/Home/Index.cshtml
+++ b/ProyectoFinal_GarroFernando/Views/Home/Index.cshtml
@@ -11,11 +11,12 @@
 
         <h1 class="text-center" style="color:#176C8C; margin:3rem 0;">Menú principal</h1>
         <a class="welcome-box" asp-area="" asp-controller="Carreras" asp-action="Index">Configuración de carreras</a>
-        <a class="welcome-box" asp-area="Identity" asp-page="/Account/Login">Configuración de cursos</a>
-        <a class="welcome-box" asp-area="Identity" asp-page="/Account/Login">Configuración de estudiantes</a>
-        <a class="welcome-box" asp-area="Identity" asp-page="/Account/Login">Configuración de profesores</a>
-        <a class="welcome-box" asp-area="Identity" asp-page="/Account/Login">Configuración de matrículas</a>
-        <a class="welcome-box" asp-area="Identity" asp-page="/Account/Login">Configuración de detalles de matrícula</a>
+        <a class="welcome-box" asp-area="" asp-controller="Cursos" asp-action="Index">Configuración de cursos</a>
+        <a class="welcome-box" asp-area="" asp-controller="Estudiantes" asp-action="Index">Configuración de estudiantes</a>
+        <a class="welcome-box" asp-area="" asp-controller="Profesores" asp-action="Index">Configuración de profesores</a>
+        <a class="welcome-box" asp-area="" asp-controller="Matriculas" asp-action="Index">Configuración de matrículas</a>
+        <a class="welcome-box" asp-area="" asp-controller="MatriculaDetalles" asp-action="Index">Configuración de detalles de matrículas</a>
+
 
     </div>
 }
