--- a/ProyectoFinal_GarroFernando/Views/Carreras/Index.cshtml
+++ b/ProyectoFinal_GarroFernando/Views/Carreras/Index.cshtml
@@ -1,47 +1,71 @@
 ﻿@model IEnumerable<ProyectoFinal_GarroFernando.Models.Carrera>
 
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
+
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<div class="card mt-auto col-md-auto mx-auto">
+    <div class="card-header">
+        <h3 class="card-title">Lista de carreras actuales:</h3>
+    </div>
+    <div class="card-body">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>
+                        Nombre:
+                    </th>
+                    <th>
+                        Código:
+                    </th>
+                    <th>
+                        Estado:
+                    </th>
+                    <th>
+                        Acciones:
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Nombre)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Codigo)
+                        </td>
+                        <td>
+                            @if (item.Activa)
+                            {
+                                <span>Activa</span>
+                            }
+                            else
+                            {
+                                <span>Desactiva</span>
+                            }
+                        </td>
+                        <td>
+                            @if (User.IsInRole("Profesor")) {
+                                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning">Editar</a> 
+                            } | 
+                            <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary">Detalles</a> |
+                            @if (User.IsInRole("Profesor")) {
+                                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Borrar</a>
+                            }
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+    <div class="card-footer">
+        <a asp-action="Create" class="btn btn-primary btn-block">Agregar nueva carrera</a>
+    </div>
+</div>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Nombre)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Codigo)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Activa)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nombre)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Codigo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Activa)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
