--- a/ProyectoFinal_GarroFernando/Views/Home/Index.cshtml
+++ b/ProyectoFinal_GarroFernando/Views/Home/Index.cshtml
@@ -1,24 +1,37 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
+
 @{
     ViewData["Title"] = "Home Page";
 }
 
 @if (SignInManager.IsSignedIn(User))
 {
-    <div class="d-flex flex-column align-items-center justify-content-center" style="min-height: calc(100vh - 160px);">
+    @if (User.IsInRole("Profesor")) {
+        <div class="d-flex flex-column align-items-center justify-content-center" style="min-height: calc(100vh - 160px);">
 
-        <h1 class="text-center" style="color:#176C8C; margin:3rem 0;">Menú principal</h1>
-        <a class="welcome-box" asp-area="" asp-controller="Carreras" asp-action="Index">Configuración de carreras</a>
-        <a class="welcome-box" asp-area="" asp-controller="Cursos" asp-action="Index">Configuración de cursos</a>
-        <a class="welcome-box" asp-area="" asp-controller="Estudiantes" asp-action="Index">Configuración de estudiantes</a>
-        <a class="welcome-box" asp-area="" asp-controller="Profesores" asp-action="Index">Configuración de profesores</a>
-        <a class="welcome-box" asp-area="" asp-controller="Matriculas" asp-action="Index">Configuración de matrículas</a>
-        <a class="welcome-box" asp-area="" asp-controller="MatriculaDetalles" asp-action="Index">Configuración de detalles de matrículas</a>
+            <h1 class="text-center" style="color:#176C8C; margin:3rem 0;">Menú principal</h1>
+            <a class="welcome-box" asp-area="" asp-controller="Carreras" asp-action="Index">Configuración de carreras</a>
+            <a class="welcome-box" asp-area="" asp-controller="Cursos" asp-action="Index">Configuración de cursos</a>
+            <a class="welcome-box" asp-area="" asp-controller="Estudiantes" asp-action="Index">Configuración de estudiantes</a>
+            <a class="welcome-box" asp-area="" asp-controller="Profesores" asp-action="Index">Configuración de profesores</a>
+            <a class="welcome-box" asp-area="" asp-controller="Matriculas" asp-action="Index">Configuración de matrículas</a>
+            <a class="welcome-box" asp-area="" asp-controller="MatriculaDetalles" asp-action="Index">Configuración de detalles de matrículas</a>
 
+        </div>
+    } 
+    else
+    {
+        <div class="d-flex flex-column align-items-center justify-content-center" style="min-height: calc(100vh - 160px);">
 
-    </div>
+            <h1 class="text-center" style="color:#176C8C; margin:3rem 0;">Menú principal</h1>
+            <a class="welcome-box" asp-area="" asp-controller="Carreras" asp-action="Index">Listado de carreras</a>
+            <a class="welcome-box" asp-area="" asp-controller="Cursos" asp-action="Index">Listado de cursos</a>
+            <a class="welcome-box" asp-area="" asp-controller="Matriculas" asp-action="Index">Mi matrícula</a>
+
+        </div>
+    }
 }
 else
 {
