Configuracion completa de lo relacionado a Cursos

--- a/ProyectoFinal_GarroFernando/Views/Home/Index.cshtml
+++ b/ProyectoFinal_GarroFernando/Views/Home/Index.cshtml
@@ -26,8 +26,8 @@
         <div class="d-flex flex-column align-items-center justify-content-center" style="min-height: calc(100vh - 160px);">
 
             <h1 class="text-center" style="color:#176C8C; margin:3rem 0;">Menú principal</h1>
-            <a class="welcome-box" asp-area="" asp-controller="Carreras" asp-action="Index">Listado de carreras</a>
-            <a class="welcome-box" asp-area="" asp-controller="Cursos" asp-action="Index">Listado de cursos</a>
+            <a class="welcome-box" asp-area="" asp-controller="Carreras" asp-action="Index">Listado de carreras general</a>
+            <a class="welcome-box" asp-area="" asp-controller="Cursos" asp-action="Index">Listado de cursos general</a>
             <a class="welcome-box" asp-area="" asp-controller="Matriculas" asp-action="Index">Mi matrícula</a>
 
         </div>
