--- a/ProyectoFinal_GarroFernando/Views/Cursos/Edit.cshtml
+++ b/ProyectoFinal_GarroFernando/Views/Cursos/Edit.cshtml
@@ -4,46 +4,49 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
 
-<h4>Curso</h4>
-<hr />
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="Nombre" class="control-label"></label>
-                <input asp-for="Nombre" class="form-control" />
-                <span asp-validation-for="Nombre" class="text-danger"></span>
+    <div class="card mt-5 col-md-6 mx-auto">
+        <div class="card-header">
+            <h3 class="card-title">Editar datos del curso</h3>
+        </div>
+        <div class="card-body">
+            <form asp-action="Edit">
+                <div asp-validation-summary="ModelOnly" class="text-danger">Nombre:</div>
+                <input type="hidden" asp-for="Id" />
+                <div class="form-group">
+                    <label asp-for="Nombre" class="control-label"></label>
+                    <input asp-for="Nombre" class="form-control" />
+                    <span asp-validation-for="Nombre" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Codigo" class="control-label">Código:</label>
+                    <input asp-for="Codigo" class="form-control" />
+                    <span asp-validation-for="Codigo" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Creditos" class="control-label">Créditos:</label>
+                    <input asp-for="Creditos" class="form-control" />
+                    <span asp-validation-for="Creditos" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="CarreraId" class="control-label">Carrera:</label>
+                    <select asp-for="CarreraId" class="form-control" asp-items="ViewBag.CarreraId"></select>
+                    <span asp-validation-for="CarreraId" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Save" class="btn btn-primary" />
+                </div>
+            </form>
+            <div class="card-footer">
+                <a asp-action="Index" class="btn btn-danger btn-block">Volver a la lista principal</a>
             </div>
-            <div class="form-group">
-                <label asp-for="Codigo" class="control-label"></label>
-                <input asp-for="Codigo" class="form-control" />
-                <span asp-validation-for="Codigo" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Creditos" class="control-label"></label>
-                <input asp-for="Creditos" class="form-control" />
-                <span asp-validation-for="Creditos" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CarreraId" class="control-label"></label>
-                <select asp-for="CarreraId" class="form-control" asp-items="ViewBag.CarreraId"></select>
-                <span asp-validation-for="CarreraId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+        </div>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
