--- a/ProyectoFinal_GarroFernando/Areas/Identity/Pages/Account/Register.cshtml
+++ b/ProyectoFinal_GarroFernando/Areas/Identity/Pages/Account/Register.cshtml
@@ -18,7 +18,7 @@
             </div>
             <div class="form-floating mb-3">
                 <input asp-for="Input.Password" class="form-control" autocomplete="Nueva contraseña" aria-required="true" placeholder="Contraseña" />
-                <label asp-for="Input.Password">Password</label>
+                <label asp-for="Input.Password">Contraseña</label>
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
