--- a/ProyectoFinal_GarroFernando/Views/Estudiantes/Index.cshtml
+++ b/ProyectoFinal_GarroFernando/Views/Estudiantes/Index.cshtml
@@ -4,44 +4,72 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
-
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Usuario)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FechaInscripcion)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Activo)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Usuario.Apellido1)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FechaInscripcion)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Activo)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<div class="card mt-auto col-md-auto mx-auto">
+    <div class="card-header">
+        <h3 class="card-title">Lista de estudiantes actuales:</h3>
+    </div>
+    <div class="card-body">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>
+                        Nombre de usuario:
+                    </th>
+                    <th>
+                        Fecha de inscripción:
+                    </th>
+                    <th>
+                        Estado actual:
+                    </th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Usuario.Apellido1)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.FechaInscripcion)
+                        </td>
+                        <td>
+                            @if (item.Activo)
+                            {
+                                <span>Activa</span>
+                            }
+                            else
+                            {
+                                <span>Desactiva</span>
+                            }
+                        </td>
+                        <td>
+                            @if (User.IsInRole("Profesor"))
+                            {
+                                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning">Editar</a>
+                            } |
+                            <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary">Detalles</a> |
+                            @if (User.IsInRole("Profesor"))
+                            {
+                                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Borrar</a>
+                            }
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+    <div class="card-footer">
+        @if (User.IsInRole("Profesor"))
+        {
+            <a asp-action="Create" class="btn btn-primary btn-block">Agregar nuevo estudiante</a>
+        }
+        else
+        {
+            <div class="card-footer">
+                <a class="btn btn-danger btn-block" asp-area="" asp-controller="Home" asp-action="Index">Volver al menú principal"</a>
+            </div>
+        }
+    </div>
+</div>
