--- a/ProyectoFinal_GarroFernando/Views/Home/Index.cshtml
+++ b/ProyectoFinal_GarroFernando/Views/Home/Index.cshtml
@@ -14,6 +14,7 @@
             <h1 class="text-center" style="color:#176C8C; margin:3rem 0;">Menú principal</h1>
             <a class="welcome-box" asp-area="" asp-controller="Carreras" asp-action="Index">Configuración de carreras</a>
             <a class="welcome-box" asp-area="" asp-controller="Cursos" asp-action="Index">Configuración de cursos</a>
+            <a class="welcome-box" asp-area="" asp-controller="Usuarios" asp-action="Index">Configuración de usuarios</a>
             <a class="welcome-box" asp-area="" asp-controller="Estudiantes" asp-action="Index">Configuración de estudiantes</a>
             <a class="welcome-box" asp-area="" asp-controller="Profesores" asp-action="Index">Configuración de profesores</a>
             <a class="welcome-box" asp-area="" asp-controller="Matriculas" asp-action="Index">Configuración de matrículas</a>
