--- a/ProyectoFinal_GarroFernando/Views/Estudiantes/Delete.cshtml
+++ b/ProyectoFinal_GarroFernando/Views/Estudiantes/Delete.cshtml
@@ -4,36 +4,37 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Estudiante</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Usuario)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Usuario.Apellido1)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaInscripcion)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FechaInscripcion)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Activo)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Activo)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+<div class="card mt-5 col-md-6 mx-auto">
+    <div class="card-header">
+        <h3 class="card-title">Datos del estudiante a eliminar</h3>
+    </div>
+    <div class="card-body">
+        <dl class="row">
+            <dt class="col-sm-10">
+                Nombre de usuario:
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Usuario.Nombre)
+            </dd>
+            <dt class="col-sm-10">
+                Fecha de inscripción:
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.FechaInscripcion)
+            </dd>
+            <dt class="col-sm-10">
+                Estado actual:
+            </dt>
+            <dd class="col-sm-10">
+                @(Model.Activo ? "Activa" : "Desactiva")
+            </dd>
+        </dl>
+        <form asp-action="Delete">
+            <input type="hidden" asp-for="Id" />
+            <input type="submit" value="Borrar estudiante" class="btn btn-warning btn-block" />
+        </form>
+    </div>
+    <div class="card-footer">
+        <a asp-action="Index" class="btn btn-danger btn-block">Volver a la lista principal</a>
+    </div>
 </div>
