--- a/ProyectoFinal_GarroFernando/Views/Profesores/Edit.cshtml
+++ b/ProyectoFinal_GarroFernando/Views/Profesores/Edit.cshtml
@@ -14,12 +14,12 @@
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <input type="hidden" asp-for="Id" />
                 <div class="form-group">
-                    <label asp-for="UsuarioId" class="control-label"></label>
+                    <label asp-for="UsuarioId" class="control-label">Nombre:</label>
                     <select asp-for="UsuarioId" class="form-control" asp-items="ViewBag.UsuarioId"></select>
                     <span asp-validation-for="UsuarioId" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Especialidad" class="control-label"></label>
+                    <label asp-for="Especialidad" class="control-label">Especialidad:</label>
                     <input asp-for="Especialidad" class="form-control" />
                     <span asp-validation-for="Especialidad" class="text-danger"></span>
                 </div>
@@ -29,7 +29,7 @@
                     </label>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Guardar cambios del profesor" class="btn btn-primary" />
+                    <input type="submit" value="Guardar cambios del profesor" class="btn btn-primary btn-block" />
                 </div>
             </form>
             <div class="card-footer">
