--- a/ProyectoFinal_GarroFernando/Views/Usuarios/Delete.cshtml
+++ b/ProyectoFinal_GarroFernando/Views/Usuarios/Delete.cshtml
@@ -4,60 +4,62 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Usuario</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Nombre)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Nombre)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Apellido1)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Apellido1)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Apellido2)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Apellido2)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Identificacion)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Identificacion)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Telefono)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Telefono)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaNacimiento)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FechaNacimiento)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+<div class="card mt-5 col-md-6 mx-auto">
+    <div class="card-header">
+        <h3 class="card-title">Datos del usuario a eliminar</h3>
+    </div>
+    <div class="card-body">
+        <dl class="row">
+            <dt class="col-sm-10">
+                Nombre:
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Nombre)
+            </dd>
+            <dt class="col-sm-10">
+                Primer apellido:
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Apellido1)
+            </dd>
+            <dt class="col-sm-10">
+                Segundo apellido:
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Apellido2)
+            </dd>
+            <dt class="col-sm-10">
+                Identificación:
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Identificacion)
+            </dd>
+            <dt class="col-sm-10">
+                Correo electrónico:
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Email)
+            </dd>
+            <dt class="col-sm-10">
+                Teléfono:
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Telefono)
+            </dd>
+            <dt class="col-sm-10">
+                Fecha de nacimiento:
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.FechaNacimiento)
+            </dd>
+        </dl>
+        <form asp-action="Delete">
+            <input type="hidden" asp-for="Id" />
+            <input type="submit" value="Borrar usuario" class="btn btn-warning btn-block" />
+        </form>
+    </div>
+    <div class="card-footer">
+        <a asp-action="Index" class="btn btn-danger btn-block">Volver a la lista principal</a>
+    </div>
 </div>
