--- a/ProyectoFinal_GarroFernando/Views/Estudiantes/Create.cshtml
+++ b/ProyectoFinal_GarroFernando/Views/Estudiantes/Create.cshtml
@@ -14,7 +14,7 @@
             <form asp-action="Create">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
-                    <label asp-for="UsuarioId" class="control-label">Nombre de usuario:</label>
+                    <label asp-for="UsuarioId" class="control-label">Nombre:</label>
                     <select asp-for="UsuarioId" class="form-control" asp-items="ViewBag.UsuarioId"></select>
                 </div>
                 <div class="form-group">
@@ -28,7 +28,7 @@
                     </label>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Crear nuevo estudiante" class="btn btn-primary" />
+                    <input type="submit" value="Crear nuevo estudiante" class="btn btn-primary btn-block" />
                 </div>
             </form>
         </div>
