--- a/ProyectoFinal_GarroFernando/Views/Estudiantes/Delete.cshtml
+++ b/ProyectoFinal_GarroFernando/Views/Estudiantes/Delete.cshtml
@@ -11,7 +11,7 @@
     <div class="card-body">
         <dl class="row">
             <dt class="col-sm-10">
-                Nombre de usuario:
+                Nombre:
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Usuario.Nombre)
