--- a/ProyectoFinal_GarroFernando/Views/Estudiantes/Edit.cshtml
+++ b/ProyectoFinal_GarroFernando/Views/Estudiantes/Edit.cshtml
@@ -11,7 +11,7 @@
         </div>
         <div class="card-body">
             <form asp-action="Edit">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div asp-validation-summary="ModelOnly" class="text-danger">Nombre:</div>
                 <input type="hidden" asp-for="Id" />
                 <div class="form-group">
                     <label asp-for="UsuarioId" class="control-label"></label>
@@ -19,7 +19,7 @@
                     <span asp-validation-for="UsuarioId" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="FechaInscripcion" class="control-label"></label>
+                    <label asp-for="FechaInscripcion" class="control-label">Fecha de inscripción:</label>
                     <input asp-for="FechaInscripcion" class="form-control" />
                     <span asp-validation-for="FechaInscripcion" class="text-danger"></span>
                 </div>
@@ -29,7 +29,7 @@
                     </label>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Guardar cambios del estudiante" class="btn btn-primary" />
+                    <input type="submit" value="Guardar cambios del estudiante" class="btn btn-primary btn-block" />
                 </div>
             </form>
             <div class="card-footer">
